<resources>
    <string name="history_dialog_message">Do you want to remove this tour!</string>
    <string name="history_dialog_yes">Yes</string>
    <string name="history_dialog_no">No</string>
    <string name="app_name">DuLich</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_login">Travel Assistant</string>
    <string name="title_user">EMAIL/PHONE</string>
    <string name="title_password">PASSWORD</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="setting">Setting</string>
    <string name="facebook_app_id">763854984088757</string>
    //facebook key
    <string name="fb_login_protocol_scheme">fb763854984088757</string>
    <string name="server_client_id">482142359913-jm4tgljits44siu2jem5ir2c5nl19js5.apps.googleusercontent.com</string>
    //Google key
    <string name="apikey">AIzaSyC-BFseKgG8WtyMum6BrAAloj1XG5uFq5w</string>
    <string name="apikeyPlaceNearly">AIzaSyDtIWXQDUA1ufc_Vff3qbz522DnZ26Nk9w</string>
    <string name="title_activity_maps">Map</string>
    <string name="search_friend">Search your friends</string>
    <string name="name_user">Nguyễn Duy Thắng</string>
    <string name="edit_profile">Edit profile</string>
    <string name="switch_language">Switch language</string>
    <string name="title_logout">Log out</string>
    <string name="project_ID">122</string>
    <string name="updatePass">Update Password</string>
    <string name="currentPass">Current password</string>
    <string name="newPass">New password</string>
    <string name="confirmPass">Confirm new password</string>
    <string name="notification">sent you an invitation for tour</string>

    <string-array name="language_arrays">
        <item>English</item>
        <item>German</item>
        <item>French</item>
        <item>Vietnamese</item>
    </string-array>
    <string name="city_prompt">Choose a city</string>
    <string-array name="city_arrays">
        <item>Hồ Chí Minh</item>
        <item>Hà Nội</item>
        <item>Đà Nẵng</item>
        <item>Bình Dương</item>
        <item>Đồng Nai</item>
        <item>Khánh Hòa</item>
        <item>Hải Phòng</item>
        <item>Long An</item>
        <item>Quảng Nam</item>
        <item>Bà Rịa Vũng Tàu</item>
        <item>Đắk Lắk</item>
        <item>Cần Thơ</item>
        <item>Bình Thuận</item>
        <item>Lâm Đồng</item>
        <item>Thừa Thiên Huế</item>
        <item>Kiên Giang</item>
        <item>Bắc Ninh</item>
        <item>Quảng Ninh</item>
        <item>Thanh Hóa</item>
        <item>Nghệ An</item>
        <item>Hải Dương</item>
        <item>Gia Lai</item>
        <item>Bình Phước</item>
        <item>Hưng Yên</item>
        <item>Bình Định</item>
        <item>Tiền Giang</item>
        <item>Thái Bình</item>
        <item>Bắc Giang</item>
        <item>Hòa Bình</item>
        <item>An Giang</item>
        <item>Vĩnh Phúc</item>
        <item>Tây Ninh</item>
        <item>Thái Nguyên</item>
        <item>Lào Cai</item>
        <item>Nam Định</item>
        <item>Quảng Ngãi</item>
        <item>Bến Tre</item>
        <item>Đắk Nông</item>
        <item>Cà Mau</item>
        <item>Vĩnh Long</item>
        <item>Ninh Bình</item>
        <item>Phú Thọ</item>
        <item>Ninh Thuận</item>
        <item>Phú Yên</item>
        <item>Hà Nam</item>
        <item>Hà Tĩnh</item>
        <item>Đồng Tháp</item>
        <item>Sóc Trăng</item>
        <item>Kon Tum</item>
        <item>Quảng Bình</item>
        <item>Quảng Trị</item>
        <item>Trà Vinh</item>
        <item>Hậu Giang</item>
        <item>Sơn La</item>
        <item>Bạc Liêu</item>
        <item>Yên Bái</item>
        <item>Tuyên Quang</item>
        <item>Điện Biên</item>
        <item>Lai Châu</item>
        <item>Lạng Sơn</item>
        <item>Hà Giang</item>
        <item>Bắc Kạn</item>
        <item>Cao Bằng</item>
    </string-array>

    <string name="service_type_prompt">Choose a service type</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="access_token">pk.eyJ1IjoiZHV5ODE5OSIsImEiOiJjazRlMTFubXUwNnh4M2xwZWE1MG9rMmV5In0.cFyJPMTMy-CmhsATotfdkA</string>
    <string-array name="service_type_arrays">
        <item>Restaurant</item>
        <item>Hotel</item>
        <item>Rest Station</item>
        <item>Other</item>
    </string-array>

</resources>
