<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_radius">


    <ImageView
        android:id="@+id/imageAvatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        app:srcCompat="@drawable/border_radius_logout" />

    <TextView
        android:id="@+id/textViewNameUser"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/imageAvatar"
        android:text="@string/name_user"
        android:textSize="24sp"
        android:textColor="#000"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewNameUser"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/imageAvatar"
        android:text="@string/edit_profile"
        android:textColor="#000"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/textViewSwitchLanguage"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/imageAvatar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:textSize="16sp"
        android:padding="5dp"
        android:text="@string/switch_language" />

    <Spinner
        android:id="@+id/province"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/imageAvatar"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/textViewSwitchLanguage"
        android:entries="@array/city_arrays"
        android:prompt="@string/city_prompt" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewSwitchLanguage"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:text="@string/title_logout"
        android:background="@drawable/button_radius_logout"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>

</RelativeLayout>